<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">App</string>
    <string name="hello_world">Hello world! Tiendas</string>
    <string name="action_settings">Refresh</string>
    <string name="title_activity_display_tiendas">DisplayTiendasActivity</string>
    <string name="id_label">The ID is</string>
    <string name="id_value">[id]</string>
    <string name="content_label">The Content is</string>
    <string name="content_value">[content]</string>
    <string name="action_refresh">Refresh</string>
    <string name="nombre_label">Nombre :</string>
    <string name="nombre_content_label">[nombre]</string>
    <string name="fecha_value">Fecha :</string>
    <string name="fecha_content_value">[fecha]</string>
    <string name="ubicacion_value">Ubicación :</string>
    <string name="ubicacion_content_value">[ubicacion]</string>
    <string name="destino_value">Destino :</string>
    <string name="destino_content_value">[destino]</string>
    <string name="title_activity_list">Lista de Registros</string>
    <string name="title_activity_vogella_activity_main_managing_fragments">VogellaActivityMainManagingFragments</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_to_list">Agregar</string>
    <string name="title_activity_item_detalle">ItemDetalle</string>
    <string name="title_activity_maps">maps</string>

</resources>
