<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100px"

        android:layout_gravity="center_horizontal"
        android:background="@android:color/holo_green_light"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="30px"
            android:layout_marginLeft="30px"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/nombre_label"
                android:text="@string/nombre_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"/>

            <TextView
                android:id="@+id/nombre_content_label"
                android:text="@string/nombre_content_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                />

        </LinearLayout>

    </LinearLayout>




    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:layout_weight="0.30">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30px"
            android:layout_marginLeft="30px"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/fecha_value"
                    android:text="@string/fecha_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/nombre_label"
                    android:textColor="#25383C"


                    />

                <TextView
                    android:id="@+id/fecha_content_value"
                    android:text="@string/fecha_content_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fecha_value"
                    android:textColor="#25383C"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/ubicacion_value"
                    android:text="@string/ubicacion_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/nombre_label"
                    android:textColor="#25383C"


                    />

                <TextView
                    android:id="@+id/ubicacion_content_value"
                    android:text="@string/ubicacion_content_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fecha_value"
                    android:textColor="#25383C"
                    />
            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30px"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/destino_value"
                    android:text="@string/destino_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/nombre_label"
                    android:textColor="#25383C"


                    />

                <TextView
                    android:id="@+id/destino_content_value"
                    android:text="@string/destino_content_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/fecha_value"
                    android:textColor="#25383C"
                    />
            </LinearLayout>






        </LinearLayout>








    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="50px"
        android:background="@android:color/white"

        >

        <ImageView
            android:layout_width="500px"
            android:layout_height="500px"

            android:id="@+id/imageView"
            android:src="@drawable/ic_launcher"
            />

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginTop="100px"
        android:background="@android:color/darker_gray"/>


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_gravity="center_horizontal"
        android:background="@android:color/white"
        >


        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"

            android:layout_weight="0.1">

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Delete"
            android:onClick="deleteItem"
            android:id="@+id/buttonDelete" />
    </LinearLayout>


</LinearLayout>